# trsh

./: .gitignore  Cargo.toml  README.md  out  out.txt  roadmap.md
src/: ast.rs  bash.pest  builtins.rs  executor.rs  main.rs  prsr.rs
src/executor/: builtins.rs  utils.rs
